--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is a repository for CloudFormation templates created by Shambo Basu
+This is a repository for CloudFormation templates created by suchismita Chatterjee
